--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2017-08-29 21:32+0200\n"
-"PO-Revision-Date: 2017-08-29 21:53+0200\n"
+"PO-Revision-Date: 2017-08-30 17:45+0200\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -525,4 +525,4 @@ msgstr "A user was created."
 
 #: views/user.py:135
 msgid "user deleted"
-msgstr "A user as deleted."
+msgstr "A user was deleted."
