--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2017-11-08 15:35+0100\n"
-"PO-Revision-Date: 2017-11-08 15:36+0100\n"
+"PO-Revision-Date: 2017-11-08 17:36+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -585,11 +585,11 @@ msgstr "site"
 
 #: views/profile.py:17 views/user.py:58
 msgid "language"
-msgstr "language"
+msgstr "Language"
 
 #: views/profile.py:18
 msgid "table rows"
-msgstr "table rows"
+msgstr "Table rows"
 
 #: views/profile.py:22
 msgid "old password"
