Updated intro text

--- a/openatlas/translations/de/LC_MESSAGES/messages.po
+++ b/openatlas/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2017-11-08 15:35+0100\n"
-"PO-Revision-Date: 2017-11-08 15:37+0100\n"
+"PO-Revision-Date: 2017-11-11 13:56+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: de\n"
 "Language-Team: de <LL@li.org>\n"
@@ -265,7 +265,7 @@ msgstr ""
 "historische, archäologische und geospatiale Daten zu verwalten.\n"
 "\n"
 "OpenAtlas ist Open Source und auf %(link_github)s vefügbar.  Es benutzt Open "
-"Source Technologien wie Apache, PostgreSQL, PostGIS, PHP, Zend Framework und "
+"Source Technologien wie Apache, PostgreSQL, PostGIS, Python 3, Flask und "
 "Leaflet.\n"
 "\n"
 "Das Datenmodell basiert auf Klassen und Eigenschaften des %(link_cidoc)s, einem "
