--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2017-11-08 15:35+0100\n"
-"PO-Revision-Date: 2017-11-11 11:55+0100\n"
+"PO-Revision-Date: 2017-11-11 13:53+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -267,7 +267,7 @@ msgstr ""
 "complex historical, archeological  and geospatial data.\n"
 "\n"
 "OpenAtlas is Open Source and available on %(link_github)s. It uses open source "
-"technology like Apache, PostgreSQL, PostGIS, PHP, Zend Framework and Leaflet.\n"
+"technology like Apache, PostgreSQL, PostGIS, Python 3, Flask and Leaflet.\n"
 "\n"
 "The data model is based on classes and properties of the %(link_cidoc)s which "
 "is an internationally established standard for historical documentation.\n"
