--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2018-11-08 14:33+0100\n"
-"PO-Revision-Date: 2018-11-08 14:34+0100\n"
+"PO-Revision-Date: 2018-11-12 13:30+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -743,7 +743,7 @@ msgstr ""
 "%(link_openatlas)s is a database application that enables you to manage "
 "complex historical, archeological  and geospatial data.\n"
 "\n"
-"OpenAtlas is Open Source and available on %(link_bitbucket)s or "
+"OpenAtlas is Open Source and available on %(link_bitbucket)s and "
 "%(link_github)s. It uses open source technology like Apache, PostgreSQL, "
 "PostGIS, Python 3, Flask and Leaflet.\n"
 "\n"
