--- a/openatlas/translations/de/LC_MESSAGES/messages.po
+++ b/openatlas/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2018-11-08 14:33+0100\n"
-"PO-Revision-Date: 2018-11-08 14:34+0100\n"
+"PO-Revision-Date: 2018-11-12 13:33+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: de\n"
 "Language-Team: de <LL@li.org>\n"
@@ -745,7 +745,7 @@ msgstr ""
 "%(link_openatlas)s ist eine Datenbank Anwendung die es ermöglicht komplexe "
 "historische, archäologische und geospatiale Daten zu verwalten.\n"
 "\n"
-"OpenAtlas ist Open Source und auf %(link_bitbucket)s oder %(link_github)s "
+"OpenAtlas ist Open Source und auf %(link_bitbucket)s und %(link_github)s "
 "vefügbar.  Es benutzt Open Source Technologien wie Apache, PostgreSQL, PostGIS, "
 "Python 3, Flask und Leaflet.\n"
 "\n"
