--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2018-12-14 14:28+0100\n"
-"PO-Revision-Date: 2018-12-14 14:30+0100\n"
+"PO-Revision-Date: 2018-12-14 15:03+0100\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -1543,7 +1543,7 @@ msgstr "Deletion not possible if subunits exists"
 
 #: views/place.py:278
 msgid "Invalid geom entered"
-msgstr "An invalid geom was entered"
+msgstr "An invalid geometry was entered"
 
 #: views/profile.py:16 views/user.py:98
 msgid "language"
